tests/good/if_value/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function main ()
    (if tt
      10
      20
    )
  )
))
